<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">

  <modelVersion>4.0.0</modelVersion>
  <groupId>com.jutools</groupId>
  <artifactId>jutools</artifactId>
  <version>0.1</version>
  
  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <deploy.target.dir>C:/apps/jutools</deploy.target.dir>
  </properties>
  
  <build>
    <plugins>
    
      <plugin>    
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <source>1.8</source>
          <target>1.8</target>
        </configuration>
      </plugin>
      
      <!-- 기존 배포된 파일들 모두 삭제  -->
      <plugin>
      	<artifactId>maven-clean-plugin</artifactId>
      	<version>2.5</version>
      	<executions>
          <execution>
            <id>clean-target</id>
            <phase>clean</phase>
            <goals>
              <goal>clean</goal>
            </goals>
            <configuration>
              <filesets>
                <fileset>
                  <directory>${deploy.target.dir}</directory>
                  <includes>
                    <include>**/*</include>
                  </includes>
                </fileset>
              </filesets>
            </configuration>
          </execution>
      	</executions>
      </plugin>
      
      <!-- jar 파일 생성 -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <version>3.1.1</version>
        <configuration>
          <outputDirectory>${deploy.target.dir}</outputDirectory>
          <archive>
            <manifest>
              <packageName>com.jutools</packageName>
              <addClasspath>true</addClasspath>
              <classpathPrefix>${deploy.target.dir}/lib</classpathPrefix>
            </manifest>
          </archive>
        </configuration>
      </plugin>
      
      <!-- library jar 파일 복사  -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-dependency-plugin</artifactId>
        <executions>
          <execution>
            <id>copy-dependencies</id>
            <phase>install</phase>
            <goals>
              <goal>copy-dependencies</goal>
            </goals>
            <configuration>
              <outputDirectory>
                ${deploy.target.dir}/lib
              </outputDirectory>
              <excludeScope>provided, test</excludeScope>
            </configuration>
          </execution>
        </executions>
      </plugin>
      
    </plugins>
  </build>
  
  <dependencies>
  
    <dependency>
      <groupId>org.projectlombok</groupId>
      <artifactId>lombok</artifactId>
      <version>1.18.26</version>
      <scope>provided</scope>
    </dependency>
    
	<dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-api</artifactId>
      <version>5.9.2</version>
      <scope>test</scope>
	</dependency>
	
    <dependency>
      <groupId>org.junit-pioneer</groupId>
      <artifactId>junit-pioneer</artifactId>
      <version>2.0.0</version>
      <scope>test</scope>
    </dependency>
    
    <!-- PressUtil 용 라이브러리들 -->
    <!-- Command Line 출력시 컬러 출력용 라이브러리 -->
	<dependency>
      <groupId>org.fusesource.jansi</groupId>
      <artifactId>jansi</artifactId>
      <version>1.17.1</version>
    </dependency>

    <!-- 엑셀 출력용 라이브러리 -->
    <dependency>
      <groupId>org.apache.poi</groupId>
      <artifactId>poi-ooxml</artifactId>
      <version>4.1.1</version>
    </dependency>
    
    <!-- Evaluator에 이스케이프 문자 처리 라이브러리 -->
    <dependency>
      <groupId>org.apache.commons</groupId>
      <artifactId>commons-text</artifactId>
      <version>1.7</version>
    </dependency>
	
  </dependencies>
  
</project>
